<menu xmlns:android="http://schemas.android.com/apk/res/android" >

     <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/logout"/>
     
      <item android:id="@+id/options"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:icon="@drawable/ic_action_overflow">
        
         <menu>
             <item android:id="@+id/item1" 
                 android:title="@string/newproject"
                 android:showAsAction="always"/>
             <item android:id="@+id/item2" 
                 android:title="@string/newfirm"
                 android:showAsAction="always"/>
             <item android:id="@+id/item3" 
                 android:title="@string/newcontact"
                 android:showAsAction="always"/>
              
             <item android:id="@+id/change_password" 
                 android:title="@string/change_password"
                 android:showAsAction="always"/>
         </menu>
     </item>
    
</menu>
