<?xml version="1.0" encoding="utf-8"?>
<uk.co.senab.actionbarpulltorefresh.library.PullToRefreshLayout
xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ptr_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
   
    
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            
            <RelativeLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    

    <TextView
        android:id="@+id/textView1"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="200dp"
        android:paddingTop="10dp"
        android:text="@string/contacts"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView1"
        android:layout_toRightOf="@+id/textView1"
        android:ems="10"
        android:hint="@string/phoneno"
        android:inputType="phone" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText2"
        android:layout_below="@+id/textView1"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editText3"
       	android:onClick="onClick"
        android:text="@string/create"
        android:textSize="25sp" />

    <EditText
    	android:id="@+id/editText1"
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:layout_alignParentLeft="true"
    	android:layout_alignParentTop="true"
    	android:layout_marginTop="24dp"
    	android:ems="10"
    	android:hint="@string/contactname" />

    <EditText
    	android:id="@+id/editText4"
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:layout_alignParentLeft="true"
    	android:layout_below="@+id/editText1"
    	android:layout_marginTop="19dp"
    	android:ems="10"
    	android:hint="@string/desig" />

    <Spinner
    	android:id="@+id/spinner1"
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:layout_above="@+id/editText2"
    	android:layout_alignLeft="@+id/editText2"
    	android:popupBackground="#cc66ff" />

    <TextView
    	android:id="@+id/textView2"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_alignParentLeft="true"
    	android:layout_alignTop="@+id/spinner1"
    	android:text="@string/Firm"
    	android:textSize="20sp" />

    </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</uk.co.senab.actionbarpulltorefresh.library.PullToRefreshLayout>
