<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/crown_login_bg"
    android:orientation="vertical" >

    <LinearLayout
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:layout_gravity="center_vertical"
    	android:orientation="vertical"
    	android:paddingLeft="20dip"
    	android:paddingRight="20dip"
    	android:paddingTop="50dip" >

    	<TextView
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:text="@string/usname"
    		android:textAppearance="?android:attr/textAppearanceSmall"
    		android:textColor="#000000"
    		android:textSize="20sp"
    		android:textStyle="bold"
    		android:typeface="serif" />

    	<EditText
    		android:id="@+id/editText1"
    		android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:hint="@string/user_hint"
    		android:inputType="text"
    		android:minWidth="250dip"
    		android:scrollHorizontally="true"
    		android:singleLine="true"
    		android:textColor="#000000" />

    	<TextView
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:text="@string/psword"
    		android:textAppearance="?android:attr/textAppearanceSmall"
    		android:textColor="#000000"
    		android:textSize="20sp"
    		android:textStyle="bold"
    		android:typeface="serif" />

    	<EditText
    		android:id="@+id/editText2"
    		android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:hint="@string/password_hint"
    		android:imeOptions="actionDone"
    		android:inputType="textPassword"
    		android:minWidth="250dip"
    		android:scrollHorizontally="true"
    		android:singleLine="true"
    		android:textColor="#000000" />

    	<Button
    		android:id="@+id/button1"
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:layout_marginBottom="5dp"
    		android:layout_marginRight="90dp"
    		android:layout_marginTop="30dp"
    		android:text="@string/login"
    		android:textSize="18sp"
    		android:textStyle="bold"
    		android:typeface="serif" />

    	<Button
    		android:id="@+id/button2"
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:background="#ffffff" />

    	
    </LinearLayout>

</ScrollView>
