<?xml version="1.0" encoding="UTF-8"?>
<uk.co.senab.actionbarpulltorefresh.library.PullToRefreshLayout
xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ptr_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
<HorizontalScrollView 
	
	android:id="@+id/horizontalScrollView1" 
	android:layout_marginLeft="20dp" 
	android:layout_alignParentTop="true" 
	android:layout_alignParentLeft="false" 
	android:layout_height="wrap_content" 
	android:layout_width="wrap_content" 
	android:scrollbarAlwaysDrawHorizontalTrack="true"
	android:focusableInTouchMode="true"
	android:fillViewport="true">
	
    <ScrollView 
    android:layout_height="wrap_content" 
    android:layout_width="wrap_content" 
    android:id="@+id/scrollView1">
    
        <LinearLayout 
        android:layout_height="wrap_content" 
        android:layout_width="match_parent" 
        android:orientation="vertical">

            <RelativeLayout
            	android:layout_width="match_parent"
            	android:layout_height="match_parent"
            	android:orientation="vertical" >

            	<EditText
            		android:id="@+id/editText1"
            		android:layout_width="wrap_content"
            		android:layout_height="wrap_content"
            		android:layout_alignParentLeft="true"
            		android:layout_alignParentTop="true"
            		android:layout_marginTop="25dp"
            		android:ems="10"
            		android:hint="@string/projectname" >

            		<requestFocus />
            	</EditText>

            	<EditText
            		android:id="@+id/editText6"
            		android:layout_width="wrap_content"
            		android:layout_height="wrap_content"
            		android:layout_alignLeft="@+id/editText5"
            		android:layout_below="@+id/editText5"
            		android:ems="10"
            		android:hint="@string/subcontractor"
            		android:paddingTop="30dp" />

            	<EditText
            		android:id="@+id/editText4"
            		android:layout_width="wrap_content"
            		android:layout_height="wrap_content"
            		android:layout_alignLeft="@+id/editText3"
            		android:layout_below="@+id/editText3"
            		android:ems="10"
            		android:hint="@string/pm"
            		android:paddingTop="30dp" />

            	<Button
            		android:id="@+id/button4"
            		android:layout_width="200dp"
            		android:layout_height="wrap_content"
            		android:layout_alignLeft="@+id/button3"
            		android:layout_below="@+id/button3"
            		android:text="@string/enddate"
            		android:textSize="15sp" />

            	<EditText
            		android:id="@+id/editText10"
            		android:layout_width="wrap_content"
            		android:layout_height="wrap_content"
            		android:layout_alignBaseline="@+id/button4"
            		android:layout_alignBottom="@+id/button4"
            		android:layout_alignParentLeft="true"
            		android:ems="10"
            		android:hint="@string/location"
            		android:paddingTop="30dp" />

            	<EditText
            		android:id="@+id/editText8"
            		android:layout_width="wrap_content"
            		android:layout_height="wrap_content"
            		android:layout_alignLeft="@+id/editText2"
            		android:layout_below="@+id/editText2"
            		android:ems="10"
            		android:hint="@string/value"
            		android:paddingTop="30dp" />

            	<EditText
            		android:id="@+id/editText3"
            		android:layout_width="wrap_content"
            		android:layout_height="wrap_content"
            		android:layout_alignLeft="@+id/editText8"
            		android:layout_below="@+id/editText8"
            		android:ems="10"
            		android:hint="@string/dev"
            		android:paddingTop="30dp" />

            	<Button
            		android:id="@+id/button5"
            		android:layout_width="wrap_content"
            		android:layout_height="wrap_content"
            		android:layout_alignLeft="@+id/editText7"
            		android:layout_below="@+id/editText7"
            		android:layout_marginTop="38dp"
            		android:text="@string/create" />

            	<EditText
            		android:id="@+id/editText5"
            		android:layout_width="wrap_content"
            		android:layout_height="wrap_content"
            		android:layout_alignTop="@+id/button3"
            		android:layout_marginLeft="148dp"
            		android:layout_toRightOf="@+id/button4"
            		android:ems="10"
            		android:hint="@string/qs" />

            	<EditText
            		android:id="@+id/editText2"
            		android:layout_width="wrap_content"
            		android:layout_height="wrap_content"
            		android:layout_below="@+id/editText10"
            		android:layout_toLeftOf="@+id/editText5"
            		android:ems="10"
            		android:hint="@string/architect"
            		android:paddingTop="30dp" />

            	<Button
            		android:id="@+id/button3"
            		android:layout_width="200dp"
            		android:layout_height="wrap_content"
            		android:layout_alignTop="@+id/editText1"
            		android:layout_marginLeft="88dp"
            		android:layout_toRightOf="@+id/editText1"
            		android:text="@string/startdate" />

            	<TextView
            		android:id="@+id/textView3"
            		android:layout_width="wrap_content"
            		android:layout_height="wrap_content"
            		android:layout_alignBottom="@+id/editText6"
            		android:layout_alignParentLeft="true"
            		android:paddingTop="30dp"
            		android:text="Select contact person"
            		android:textSize="16sp" />

            	<EditText
            		android:id="@+id/editText7"
            		android:layout_width="wrap_content"
            		android:layout_height="wrap_content"
            		android:layout_alignParentRight="true"
            		android:layout_below="@+id/spinner2"
            		android:ems="10"
            		android:hint="@string/volume"
            		android:paddingTop="30dp" />

            	<Spinner
            		android:id="@+id/spinner4"
            		android:layout_width="wrap_content"
            		android:layout_height="wrap_content"
            		android:layout_alignLeft="@+id/editText7"
            		android:layout_centerVertical="true"
            		android:popupBackground="#cc66ff" />

            	<Spinner
            		android:id="@+id/spinner2"
            		android:layout_width="wrap_content"
            		android:layout_height="wrap_content"
            		android:layout_alignParentLeft="true"
            		android:layout_below="@+id/textView3"
            		android:layout_toLeftOf="@+id/button3"
            		android:popupBackground="#cc66ff" />

            	<Spinner
            		android:id="@+id/spinner1"
            		android:layout_width="wrap_content"
            		android:layout_height="wrap_content"
            		android:layout_below="@+id/textView2"
            		android:layout_toLeftOf="@+id/button3"
            		android:popupBackground="#cc66ff" />

            	<TextView
            		android:id="@+id/textView2"
            		android:layout_width="wrap_content"
            		android:layout_height="wrap_content"
            		android:layout_alignParentLeft="true"
            		android:layout_alignTop="@+id/editText7"
            		android:text="Select Firms"
            		android:textSize="16sp" />

            	<TextView
            		android:id="@+id/textView1"
            		android:layout_width="wrap_content"
            		android:layout_height="wrap_content"
            		android:layout_above="@+id/spinner3"
            		android:layout_alignParentLeft="true"
            		android:text="Select Stage"
            		android:textSize="16sp" />

            	<Spinner
            		android:id="@+id/spinner3"
            		android:layout_width="wrap_content"
            		android:layout_height="wrap_content"
            		android:layout_alignParentBottom="true"
            		android:layout_alignParentLeft="true"
            		android:layout_alignRight="@+id/spinner1"
            		android:popupBackground="#cc66ff" />

            </RelativeLayout>
                
             </LinearLayout>
             
             </ScrollView>
             
             </HorizontalScrollView>
         
</uk.co.senab.actionbarpulltorefresh.library.PullToRefreshLayout>   